# uncertaintykit

./: index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/formulas/: library.rs
src-tauri/src/math/: ast.rs  differentiator.rs  evaluator.rs  formatter.rs  mod.rs  parser.rs  propagator.rs  simplifier.rs  tokenizer.rs
src-tauri/src/storage/: mod.rs
src/components/: FormulaInput.tsx  FormulaLibrary.tsx  LatexDisplay.tsx  ResultPanel.tsx  VariableTable.tsx
